--- a/unsup_mia_test.ipynb
+++ b/unsup_mia_test.ipynb
@@ -30,7 +30,6 @@
     "        raise ValueError('Not a valid boolean string')\n",
     "    return s == 'True'\n",
     "\n",
-    "# 用parser的话可以命令行写入参数  python main.py --hop 2 --hidden 32\n",
     "parser = argparse.ArgumentParser() \n",
     "parser.add_argument('--dataset', default='ciao')\n",
     "parser.add_argument('--model_name', default=\"DESIGN\")  \n",
@@ -43,14 +42,14 @@
     "parser.add_argument('--hop', default=2, type=int) # 3\n",
     "parser.add_argument('--hidden', default=64, type=int)\n",
     "parser.add_argument('--dropout', default=0.5, type=float)\n",
-    "parser.add_argument('--neg', default=1, type=int) # 训练时的neg sample\n",
+    "parser.add_argument('--neg', default=1, type=int) # \n",
     "# parser.add_argument('--split', default=0.8, type=float)\n",
-    "parser.add_argument('--std', default=0.1, type=float) # 无用\n",
+    "parser.add_argument('--std', default=0.1, type=float) \n",
     "parser.add_argument('--decay', default=1e-4, type=float)\n",
     "\n",
     "# IDGL hyper_parameter \n",
     "parser.add_argument('--graph_learn_hidden_size', default=70, type=int)\n",
-    "parser.add_argument('--graph_learn_top_k_S', default=30, type=int) # 无用\n",
+    "parser.add_argument('--graph_learn_top_k_S', default=30, type=int) \n",
     "parser.add_argument('--graph_learn_epsilon', default=0, type=float)\n",
     "parser.add_argument('--graph_skip_conn', default=0.8, type=float)\n",
     "parser.add_argument('--graph_learn_num_pers', default=4, type=int)\n",
@@ -59,8 +58,8 @@
     "# ssl hyper_parameter\n",
     "parser.add_argument('--ssl_temp', default=0.2, type=float)\n",
     "parser.add_argument('--ssl_reg', default=1e-6, type=float) # 0.1/0.2\n",
-    "parser.add_argument('--ssl_ratio', default=0.1, type=float) # 无用\n",
-    "parser.add_argument('--ssl_aug_type', default='ed', type=str) # 无用\n",
+    "parser.add_argument('--ssl_ratio', default=0.1, type=float) \n",
+    "parser.add_argument('--ssl_aug_type', default='ed', type=str) \n",
     "\n",
     "# recon hyper_parameter\n",
     "parser.add_argument('--recon_reg', default=0.2, type=float)\n",
@@ -117,7 +116,7 @@
     "    intersection = len(set1.intersection(set2))\n",
     "    union = len(set1.union(set2))\n",
     "    if union == 0:\n",
-    "        return 0  # 避免除以零\n",
+    "        return 0  \n",
     "    return intersection / union\n",
     "\n",
     "\n",
@@ -127,42 +126,20 @@
     "    intersection = len(set1.intersection(set2))\n",
     "    union = len(set1) * len(set2)\n",
     "    if union == 0:\n",
-    "        return 0  # 避免除以零\n",
+    "        return 0  \n",
     "    return intersection / union\n",
     "\n",
     "\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "# TODO:\n",
-    "# 改这里，\n",
-    "# 1）改测试数据集；flickr和ciao用一个/social_mia/下已有模型的测试数据集就行（反正都是一样的\n",
-    "# 2）改推荐结果，根据要测试的模型，在这里：./social_mia/[model name]/[model name-top30-pp].pkl，根据测试的模型，选择不同的model name\n",
     "\n",
     "args.dataset = 'ciao'\n",
     "# args.dataset = 'flickr'\n",
     "config = vars(args)\n",
-    "# test_file = 'mia_test_shadow_0.1_flickr_DESIGN-flickr-final.pth-top30-pp.pkl.csv'\n",
     "test_file = './social_mia/DESIGN-ciao-final.pth/mia_test_shadow_0.1_ciao_DESIGN-ciao-final.pth-top30-pp.pkl.csv'\n",
     "# test_file = './social_mia/DESIGN-flickr-final.pth/mia_test_shadow_0.1_flickr_DESIGN-flickr-final.pth-top30-pp.pkl.csv'\n",
     "config['test_path'] = test_file\n",
     "\n",
-    "# data_dir = '/home/zhaoxuhao/SocialPP/DESIGN22/social_mia/DESIGN-def-l1v3-0.08.pth/ciao_DESIGN-def-l1v3-0.08.pth-top30-pp.pkl'\n",
-    "# data_dir = '/home/zhaoxuhao/SocialPP/DESIGN22/social_mia/DESIGN-def-er-1.5.pth/ciao_DESIGN-def-er-1.5.pth-top30-pp.pkl'\n",
-    "# data_dir = '/home/zhaoxuhao/SocialPP/DESIGN22/social_mia/DESIGN-def-dp-1.pth/ciao_DESIGN-def-dp-1.pth-top30-pp.pkl'\n",
-    "# data_dir = '/home/zhaoxuhao/SocialPP/LightGCN/social_mia/LightGCN-ciao-final.pth/ciao_LightGCN-ciao-final.pth-top30-pp.pkl'\n",
-    "\n",
-    "data_dir = '/home/zhaoxuhao/SocialPP/DESIGN22/social_mia/DiffNet-ciao-final.pth/ciao_DiffNet-ciao-final.pth-top30-pp.pkl'\n",
-    "data_dir = '/home/zhaoxuhao/SocialPP/DESIGN22/social_mia/DiffNet-ciao-def-dp-1.pth/ciao_DiffNet-ciao-def-dp-1.pth-top30-pp.pkl'\n",
-    "data_dir = '/home/zhaoxuhao/SocialPP/DESIGN22/social_mia/DiffNet-ciao-def-er-1.5.pth/ciao_DiffNet-ciao-def-er-1.5.pth-top30-pp.pkl'\n",
-    "# data_dir = '/home/zhaoxuhao/SocialPP/DESIGN22/social_mia/DiffNet-flickr-final.pth/flickr_DiffNet-flickr-final.pth-top30-pp.pkl'\n",
-    "\n",
-    "# data_dir = '/home/zhaoxuhao/SocialPP/GDMSR/social_mia/GDMSR-ciao-final.pth/ciao_GDMSR-ciao-final.pth-top30-pp.pkl'\n",
-    "# data_dir = '/home/zhaoxuhao/SocialPP/GDMSR/social_mia/GDMSR-flickr-final.pth/flickr_GDMSR-flickr-final.pth-top30-pp.pkl'\n",
-    "\n",
-    "\n",
-    "# data_dir = '/home/zhaoxuhao/SocialPP/DESIGN22/social_mia/DESIGN-flickr-def-l1v3-0.08.pth/flickr_DESIGN-flickr-def-l1v3-0.08.pth-top30-pp.pkl'\n",
-    "# data_dir = '/home/zhaoxuhao/SocialPP/DESIGN22/social_mia/DESIGN-flickr-def-er-1.0.pth/flickr_DESIGN-flickr-def-er-1.0.pth-top30-pp.pkl'\n",
-    "# data_dir = '/home/zhaoxuhao/SocialPP/DESIGN22/social_mia/DESIGN-flickr-def-dp-3.pth/flickr_DESIGN-flickr-def-dp-3.pth-top30-pp.pkl'\n",
-    "# data_dir = '/home/zhaoxuhao/SocialPP/DESIGN22/social_mia/DESIGN-flickr-final.pth/flickr_DESIGN-flickr-final.pth-top30-pp.pkl'\n",
+    "data_dir = './social_mia/DiffNet-ciao-final.pth/ciao_DiffNet-ciao-final.pth-top30-pp.pkl'\n",
     "data_file = open(data_dir, 'rb')\n",
     "ui_rec_dict = pickle.load(data_file)\n",
     "test_raw_data = pd.read_csv(config['test_path'])\n",
@@ -275,96 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "auc 0.7058490306611862\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/zhaoxuhao/ls/envs/torch1.13_cu11.6/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "recall: 0.0, precision: 0.0, f1: 0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/zhaoxuhao/ls/envs/torch1.13_cu11.6/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "recall: 0.0, precision: 0.0, f1: 0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/zhaoxuhao/ls/envs/torch1.13_cu11.6/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "recall: 0.0, precision: 0.0, f1: 0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/zhaoxuhao/ls/envs/torch1.13_cu11.6/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "recall: 0.0, precision: 0.0, f1: 0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/zhaoxuhao/ls/envs/torch1.13_cu11.6/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "recall: 0.0, precision: 0.0, f1: 0.0\n",
-      "recall: 0.18558436039099022, precision: 0.7717921527041357, f1: 0.2992188570645471\n",
-      "recall: 0.8089757756056098, precision: 0.6194781272984073, f1: 0.7016576418505727\n",
-      "recall: 0.8089757756056098, precision: 0.6194781272984073, f1: 0.7016576418505727\n",
-      "recall: 0.8089757756056098, precision: 0.6194781272984073, f1: 0.7016576418505727\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "record = roc_auc_score(test_y, test_yhat)\n",
     "\n",
